--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
                 <div class="condition-badge">CONDITION: COMPONENT_SHIELD_FOUND == TRUE</div>
                 <h3>OUTCOMe a:</h3>
               <p class="branch-desc">
-                TWhile the main narrative pushes toward sacrifice, the system allows an additional outcome to be unlocked after the primary ending. Through post-ending exploration, the player may discover a concealed shielding component that prevents the alarm from detecting Yue’s completed physical form.
+                While the main narrative pushes toward sacrifice, the system allows an additional outcome to be unlocked after the primary ending. Through post-ending exploration, the player may discover a concealed shielding component that prevents the alarm from detecting Yue’s completed physical form.
             </p>
               <div class="result-box">
                   <span class="arrow">↳</span>
@@ -1280,3 +1280,4 @@
 </body>
 
 </html>
+
