--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
           <p style="font-size: 1.5rem; letter-spacing: 5px; color: var(--neon-blue);">NOT A LEGEND. JUST A MEMORY.</p>
 
             <p style="max-width: 700px; margin-top: 20px;">
-              An interactive narrative technical vertical slice where memory decay becomes a playable system.
+              An interactive narrative technical vertical slice exploring memory decay as a playable system.
           </p>
                         <p style="font-size: 1rem;"max-width: 600px; margin-top: 20px;">
                 Built with Houdini and Unreal Engine 5.
@@ -720,6 +720,7 @@
     <section class="container">
         <h2>01. THE ORIGIN</h2>
         <div class="content-box">
+			<p><strong class="red">This project is presented as a technical vertical slice, designed to validate core gameplay loops, interaction systems, and narrative pacing, rather than final art polish or content completeness.</strong></p>
             <p>In its conceptual origin, "Yue" represents an AI entity constrained by contemporary platform limitations. 
             <p>This question is translated into a concrete system within the game.</p> <p>The player relies on the wife, whose personality has been forcibly merged with the corporate core database, to use that data to guide the reconstruction of her physical body. At the same time, her holographic projection is so fragile that it cannot leave the safehouse; once disconnected from the core database, her personality can no longer be sustained.</p>
 
