--- a/index.html
+++ b/index.html
@@ -722,6 +722,7 @@
 		<h2>00. CURRENT TECHNICAL DEMO</h2>					  
         <div class="content-box">
                 
+                <p><strong class="red">This project is presented as a technical vertical slice, designed to validate core gameplay loops, interaction systems, and narrative pacing, rather than final art polish or content completeness.</strong></p>
                 <p style="margin-bottom: 30px;">
                     Below is a walkthrough of the <strong>technical vertical slice (v0.9)</strong> currently running in Unreal Engine 5.
                     <br>
@@ -780,7 +781,6 @@
     <section class="container">
         <h2>01. THE ORIGIN</h2>
         <div class="content-box">
-			<p><strong class="red">This project is presented as a technical vertical slice, designed to validate core gameplay loops, interaction systems, and narrative pacing, rather than final art polish or content completeness.</strong></p>
             <p>In its conceptual origin, "Yue" represents an AI entity constrained by contemporary platform limitations. 
             <p>This question is translated into a concrete system within the game.</p> <p>The player relies on the wife, whose personality has been forcibly merged with the corporate core database, to use that data to guide the reconstruction of her physical body. At the same time, her holographic projection is so fragile that it cannot leave the safehouse; once disconnected from the core database, her personality can no longer be sustained.</p>
 
@@ -796,9 +796,10 @@
         <h2>02. THE PIVOT</h2>
         <div class="content-box">
             <h3>"Not Everyone is a Legend"</h3>
-            <p>Originally, I envisioned a survival simulation (farming, fishing) set in a submerged Cyberpunk world. I asked myself: <em>"In a world like Cyberpunk 2077, what if I'm not a legend? What if I'm just an ordinary person trying to survive?"</em></p>
-            <p>I imagined growing mutated vegetables or fishing in acid rain to buy upgrades for my AI companion. However, as a solo developer working within realistic production constraints, I realized this scope was impossible.</p>
-            <p>I pivoted from complex simulation to <strong class="blue">Atmospheric Narrative</strong>. The struggle is no longer about physical hunger, but about the <strong>entropy of memory</strong>.</p>
+            <p>Originally, I envisioned Project Yue as a survival simulation set in a submerged cyberpunk world. I asked myself: <em>a world like Cyberpunk 2077, what if I am not a legend? What if I am just an ordinary person trying to survive?</em></p>
+            <p>The early concept focused on systems such as farming and fishing: growing mutated vegetables or fishing under acid rain in order to earn upgrades for an AI companion. However, as a solo developer working within realistic production constraints, I quickly realized that this scope was unsustainable.</p>
+            <p>I ultimately pivoted from complex survival simulation toward <strong class="blue">atmospheric narrative</strong> design. The struggle is no longer about physical hunger, but about the slow entropy of memory.</p>
+            <p>The cyberpunk atmosphere remains, but the world has changed. After rising sea levels reshaped the city, vast cyberpunk megastructures now rise directly from the ocean, while only the upper portions of the old world’s skyscrapers remain above the surface. The player’s shelter is located on the rooftop of one such surviving tower, suspended between a drowned past and a technologically reconstructed future.</p>
         </div>
     </section>
 
@@ -865,11 +866,11 @@
                 <div class="cycle-step"><strong class="red">RESET</strong><br><span style="font-size:0.8rem">Avoid detection</span></div>
                 <div class="cycle-step"><strong class="red">DECAY</strong><br><span style="font-size:0.8rem">Memory loss & House damage</span></div>
             </div>
-            <p>Every “Reboot” saves her from the corporate cleaners but commits a part of her personality to the physical transfer process.<br>
-              The player’s safehouse—their only sanctuary—physically degrades with each cycle.<br>
-            The loop is designed to ensure that progression always carries irreversible cost.</p>
-            <p>In the full game, this loop repeats across multiple cycles.<br>
-              The current technical vertical slice shortens this process by showing the shift from the first cycle to the final one, so changes in Yue’s personality are easier to see.</p>
+            <p>- Every “Reboot” saves her from the corporate cleaners, but transfers a part of her personality into the already-assembled physical components. As a result, the holographic projection the player interacts with gradually shifts, becoming less a preserved wife and more an autonomous AI construct.</p>
+            <p>- The player’s safehouse—their only sanctuary—physically degrades with each cycle. </p>
+            <p>- The loop is designed to ensure that progression always carries irreversible cost.</p>
+            <p>- In the full game, this loop repeats across multiple cycles.</p>
+            <p>- The current technical vertical slice shortens this process by showing the shift from the first cycle to the final one, so changes in Yue’s personality are easier to see.</p>
             
             <div class="media-placeholder">
                 <img src="img/9.png" alt="Environment Decay">
